[package]
name = "easyio"
version = "0.1.0"
authors = ["ef"]
edition = "2018"
description = "Rust library for convenience IO functions"
license = "MIT"
documentation = "https://docs.rs/easyio"
repository = "https://github.com/eternal-flame-AD/easyio/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
